--- a/src/test/resources/conf/whats-next/DEV.properties
+++ b/src/test/resources/conf/whats-next/DEV.properties
@@ -1,5 +1,5 @@
 mongo.database.host=localhost:27017,localhost:27018,localhost:27019
-mongo.database.name=upcoming
+mongo.database.name=upcoming-test
 mongo.database.username=upcoming
 mongo.database.password=upcoming
 context=/upcoming
