Protect admin and event resources

--- a/src/test/resources/conf/whats-next/DEV.properties
+++ b/src/test/resources/conf/whats-next/DEV.properties
@@ -3,3 +3,4 @@ mongo.database.name=upcoming-test
 mongo.database.username=upcoming
 mongo.database.password=upcoming
 context=/upcoming
+authenticate=false
